tests/type/bad/record_missing_field.hel
foreign io_unit: IO<()>;

type Point = { x: f64, y: f64 };

p = Point{ x: 1.0 };

main = io_unit;
